--- a/public/422.html
+++ b/public/422.html
@@ -1,67 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The change you wanted was rejected (422)</title>
+  <title>Cavin - Action non autorisée (422)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@300;400;700&display=swap" rel="stylesheet">
   <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
-
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
-
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
-
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    body {
+      background-color: #f5f1e8;
+      color: #2c1810;
+      font-family: 'Inria Serif', serif;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      text-align: center;
+    }
+    .icon {
+      font-size: 4rem;
+      margin-bottom: 10px;
+      display: block;
+    }
+    h1 {
+      color: #5d2e2e;
+      font-size: 2rem;
+      margin-bottom: 15px;
+    }
+    p {
+      max-width: 400px;
+      margin: 0 auto 30px;
+      color: #666;
+      line-height: 1.5;
+    }
+    .link {
+      color: #c4a661;
+      font-weight: 700;
+      text-decoration: none;
+      letter-spacing: 1px;
+      border-bottom: 1px solid #c4a661;
+    }
   </style>
 </head>
-
-<body class="rails-default-error-page">
-  <!-- This file lives in public/422.html -->
-  <div class="dialog">
-    <div>
-      <h1>The change you wanted was rejected.</h1>
-      <p>Maybe you tried to change something you didn't have access to.</p>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
+<body>
+  <div>
+    <span class="icon">🍷</span>
+    <h1>Dégustation interrompue</h1>
+    <p>L'action que vous avez tentée n'a pas pu être traitée. Il est possible que votre session ait expiré ou que la requête soit invalide.</p>
+    <a href="/" class="link">RETOUR À L'ACCUEIL</a>
   </div>
 </body>
 </html>
