--- a/public/500.html
+++ b/public/500.html
@@ -1,66 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>Cavin - Erreur Serveur (500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@300;400;700&display=swap" rel="stylesheet">
   <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
-
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
-
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
-
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    body {
+      background-color: #f5f1e8;
+      color: #2c1810;
+      font-family: 'Inria Serif', serif;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      text-align: center;
+    }
+    .container {
+      background: white;
+      padding: 60px 40px;
+      border-radius: 30px;
+      box-shadow: 0 15px 35px rgba(93, 46, 46, 0.08);
+      max-width: 550px;
+    }
+    .status-code {
+      color: #c4a661;
+      font-weight: 700;
+      letter-spacing: 5px;
+      font-size: 0.8rem;
+      margin-bottom: 15px;
+    }
+    h1 {
+      font-size: 2.5rem;
+      color: #5d2e2e;
+      margin-bottom: 20px;
+      line-height: 1.2;
+    }
+    p {
+      font-size: 1.1rem;
+      line-height: 1.6;
+      color: #666;
+    }
   </style>
 </head>
 
-<body class="rails-default-error-page">
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
+<body>
+  <div class="container">
+    <div class="status-code">ERREUR 500</div>
+    <h1>Bouchon cassé...</h1>
+    <p>Nous rencontrons une difficulté technique imprévue. Nos sommeliers travaillent au rétablissement du service. Veuillez patienter un instant.</p>
   </div>
 </body>
 </html>
